--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@ h1{
         <center>
           <img src="https://images.wsj.net/im-979574?width=1280&size=1" id="JB"/>
         <img src="https://media.tenor.com/upkb4zJo4CEAAAAM/jalen-brunson-jalen-brunson-knicks.gif" id="JB"/>
-        </center>
+       <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Knicks_playing_at_Madison_Square_Garden.jpg" id="JB" />
+      </center>
       </div>
     </div>
   </body>
